<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_package</name>
  <version>0.0.1</version>
  <description>The ROS 2 package template</description>
  <maintainer email="pawel.irzyk6@gmail.com">Paweł Irzyk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- Replace with your package's API dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <!-- Replace with your package's API dependencies -->

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>